<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <TextView
            android:id="@+id/welcome_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:textSize="32sp"
            android:text="@string/the_shoe_store_subtitle"/>

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/welcome_subtitle"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/welcome_text"/>

        <Button
            android:id="@+id/instructions_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/welcome_text"
            app:layout_constraintStart_toStartOf="@id/welcome_text"
            app:layout_constraintEnd_toEndOf="@id/welcome_text"
            android:text="@string/instructions_button"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>