<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <TextView
        android:id="@+id/emailLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/emailLabel"
        app:layout_constraintBottom_toTopOf="@id/passwordLabel"
        app:layout_constraintEnd_toEndOf="@id/passwordLabel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/passwordLabel" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/emailLabel"
        app:layout_constraintStart_toEndOf="@id/emailLabel"
        android:importantForAutofill="yes"
        android:inputType="textEmailAddress"
        android:autofillHints="E-mail"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:inputType="textEmailAddress"
        android:text="@string/passwordLabel"
        app:layout_constraintEnd_toStartOf="@+id/passwordEditText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailLabel"
        tools:ignore="TextViewEdits" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        app:layout_constraintBaseline_toBaselineOf="@id/passwordLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/passwordLabel"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/loginExistingAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/passwordLabel"
        app:layout_constraintStart_toStartOf="@id/passwordLabel"
        app:layout_constraintEnd_toEndOf="@id/passwordEditText"
        android:text="@string/login_with_existing_account"/>

    <Button
        android:id="@+id/loginNewAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/loginExistingAccount"
        app:layout_constraintStart_toStartOf="@id/passwordLabel"
        app:layout_constraintEnd_toEndOf="@id/passwordEditText"
        android:text="@string/login_with_new_account"/>

</androidx.constraintlayout.widget.ConstraintLayout>