<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewmodel"
            type="com.udacity.shoestore.models.ShoeStoreViewModel"
            />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

        <TextView
            android:id="@+id/nameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/nameLabel"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/nameEditText"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:labelFor="@+id/nameEditText"/>

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@id/nameLabel"
            app:layout_constraintStart_toEndOf="@id/nameLabel"
            app:layout_constraintEnd_toEndOf="parent"
            android:importantForAutofill="yes"
            android:inputType="text"
            android:text="@{viewmodel.shoe.name}"
            android:autofillHints="Name"/>


        <TextView
            android:id="@+id/companyLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/companyLabel"
            app:layout_constraintTop_toBottomOf="@id/nameLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/companyEditText"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:labelFor="@id/companyEditText"/>

        <EditText
            android:id="@+id/companyEditText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@id/companyLabel"
            app:layout_constraintStart_toEndOf="@id/companyLabel"
            app:layout_constraintEnd_toEndOf="parent"
            android:importantForAutofill="yes"
            android:inputType="text"
            android:text="@{viewmodel.shoe.company}"
            android:autofillHints="Company" />



        <TextView
            android:id="@+id/sizeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/sizeLabel"
            app:layout_constraintTop_toBottomOf="@id/companyLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/sizeEditText"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:labelFor="@id/sizeEditText"/>

        <EditText
            android:id="@+id/sizeEditText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@id/sizeLabel"
            app:layout_constraintStart_toEndOf="@id/sizeLabel"
            app:layout_constraintEnd_toEndOf="parent"
            android:importantForAutofill="yes"
            android:inputType="numberDecimal"
            android:autofillHints="Size"
            android:text="@{String.valueOf(viewmodel.shoe.size)}"
            tools:ignore="TextFields" />



        <TextView
            android:id="@+id/descriptionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/descriptionLabel"
            app:layout_constraintTop_toBottomOf="@id/sizeLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/descriptionEditText"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:labelFor="@id/descriptionEditText"/>

        <EditText
            android:id="@+id/descriptionEditText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@id/descriptionLabel"
            app:layout_constraintStart_toEndOf="@id/descriptionLabel"
            app:layout_constraintEnd_toEndOf="parent"
            android:importantForAutofill="yes"
            android:inputType="text"
            android:text="@{viewmodel.shoe.description}"
            android:autofillHints="Description"
            tools:ignore="TextFields" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@id/descriptionLabel"
            app:layout_constraintStart_toStartOf="@id/descriptionLabel"
            app:layout_constraintEnd_toStartOf="@id/save_button"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@id/descriptionLabel"
            app:layout_constraintStart_toEndOf="@id/cancel_button"
            app:layout_constraintEnd_toEndOf="@id/descriptionEditText"
            android:text="@string/save"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>